// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additional-space.md 1`] = `
1. Fork the repo and create your branch from \`master\`.

   Open terminal (e.g. Terminal, iTerm, Git Bash or Git Shell) and type:
   \`\`\`sh
   git clone https://github.com/<your_username>/jest
   cd jest
   git checkout -b my_branch
   \`\`\`
   Note:
   Replace \`<your_username>\` with your GitHub username

3. Run \`yarn install\`.
   On Windows:
   To install [Yarn](https://yarnpkg.com/en/docs/install#windows-tab) on Windows you may need to download either node.js or Chocolatey<br />

    \`\`\`sh
    yarn install
    \`\`\`
    To check your version of Yarn and ensure it's installed you can type:
    \`\`\`sh
    yarn --version
    \`\`\`~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1. Fork the repo and create your branch from \`master\`.

   Open terminal (e.g. Terminal, iTerm, Git Bash or Git Shell) and type:

   \`\`\`sh
   git clone https://github.com/<your_username>/jest
   cd jest
   git checkout -b my_branch
   \`\`\`

   Note: Replace \`<your_username>\` with your GitHub username

2. Run \`yarn install\`. On Windows: To install
   [Yarn](https://yarnpkg.com/en/docs/install#windows-tab) on Windows you may
   need to download either node.js or Chocolatey<br />

   \`\`\`sh
   yarn install
   \`\`\`

   To check your version of Yarn and ensure it's installed you can type:

   \`\`\`sh
   yarn --version
   \`\`\`

`;

exports[`backtick.md 1`] = `
\`\`\`\`\`\`\`\`\`\`

\`\`\`js
console.log("hello world!");
\`\`\`

\`\`\`\`\`\`\`\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`\`
\`\`\`js
console.log("hello world!");
\`\`\`
\`\`\`\`

`;

exports[`format.md 1`] = `
\`\`\`js
const foo      = 'bar'



   console     .log(    213    )
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`js
const foo = "bar";

console.log(213);
\`\`\`

`;

exports[`indent.md 1`] = `
    Indented Code Block
    Indented Code Block
    Indented Code Block
    Indented Code Block
    Indented Code Block

- \`\`\`
  Fenced Code Block
  Fenced Code Block
  Fenced Code Block
  Fenced Code Block
  Fenced Code Block
  \`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    Indented Code Block
    Indented Code Block
    Indented Code Block
    Indented Code Block
    Indented Code Block

* \`\`\`
  Fenced Code Block
  Fenced Code Block
  Fenced Code Block
  Fenced Code Block
  Fenced Code Block
  \`\`\`

`;

exports[`lang.md 1`] = `
\`\`\`js
console.log("hello world");
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`js
console.log("hello world");
\`\`\`

`;

exports[`simple.md 1`] = `
\`\`\`
hello world
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`
hello world
\`\`\`

`;
